[package]
name = "eziclean"
version = "0.1.0"
authors = ["Sergey Matyukevich <geomatsi@gmail.com>"]
edition = "2018"

autobins = false
autotests = false
autoexamples = false

[features]
default = ["hal"]
hal = ["stm32f1xx-hal"]
ral = ["stm32ral"]

# deps
#
[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
panic-semihosting = "0.5.2"
cortex-m-semihosting = "0.3.3"
panic-itm = "0.4.1"
nb = "0.1.2"
cortex-m-rtfm = "0.4.3"

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

[dependencies.kxcj9]
version = "0.2.0"

[dependencies.bitbang-hal]
git = "https://github.com/sajattack/bitbang-hal"

[dependencies.stm32f1xx-hal]
optional = true
git = "https://github.com/stm32-rs/stm32f1xx-hal.git"
features = ["stm32f101", "rt"]

[dependencies.stm32ral]
optional = true
version = "0.2.0"
features = ["stm32f101", "rt"]

# binaries

[[bin]]
name = "test-ral-adc-sensors"
path = "src/bin/test-ral-adc-sensors.rs"
required-features = [ "ral" ]

[[bin]]
name = "test-ral-pwm-wheels"
path = "src/bin/test-ral-pwm-wheels.rs"
required-features = [ "ral" ]

[[bin]]
name = "test-hal-pwm-wheels"
path = "src/bin/test-hal-pwm-wheels.rs"
required-features = [ "hal"] 

[[bin]]
name = "test-hal-pwm-brushes"
path = "src/bin/test-hal-pwm-brushes.rs"
required-features = [ "hal"] 

[[bin]]
name = "test-hal-adc-sensors"
path = "src/bin/test-hal-adc-sensors.rs"
required-features = [ "hal"] 

[[bin]]
name = "test-hal-wheel-encoders"
path = "src/bin/test-hal-wheel-encoders.rs"
required-features = [ "hal" ]

[[bin]]
name = "test-hal-battery-charging"
path = "src/bin/test-hal-battery-charging.rs"
required-features = [ "hal" ]

[[bin]]
name = "test-hal-pwr"
path = "src/bin/test-hal-pwr.rs"
required-features = [ "hal" ]

[[bin]]
name = "test-hal-i2c-acc-test1"
path = "src/bin/test-hal-i2c-acc-test1.rs"
required-features = [ "hal" ]

[[bin]]
name = "test-hal-i2c-acc-test2"
path = "src/bin/test-hal-i2c-acc-test2.rs"
required-features = [ "hal" ]

[[bin]]
name = "test-hal-sensor-button"
path = "src/bin/test-hal-sensor-button.rs"
required-features = [ "hal" ]

[[bin]]
name = "test-hal-rtfm-robot-v1"
path = "src/bin/test-hal-rtfm-robot-v1.rs"
required-features = [ "hal" ]

# examples

[[example]]
name = "example-beep"
path = "examples/ral/example-beep.rs"
required-features = [ "ral"] 

[[example]]
name = "example-front-ir-leds"
path = "examples/ral/example-front-ir-leds.rs"
required-features = [ "ral"] 

[[example]]
name = "example-bottom-ir-les"
path = "examples/ral/example-bottom-ir-leds.rs"
required-features = [ "ral"] 

[[example]]
name = "example-right-wheel"
path = "examples/ral/example-right-wheel.rs"
required-features = [ "ral"] 

[[example]]
name = "example-left-wheel"
path = "examples/ral/example-left-wheel.rs"
required-features = [ "ral"] 

[[example]]
name = "example-brushes"
path = "examples/ral/example-brushes.rs"
required-features = [ "ral"] 

[[example]]
name = "example-wheel-encoders"
path = "examples/ral/example-wheel-encoders.rs"
required-features = [ "ral"] 

[[example]]
name = "example-floor-sensors"
path = "examples/ral/example-floor-sensors.rs"
required-features = [ "ral"] 

[[example]]
name = "example-front-sensors"
path = "examples/ral/example-front-sensors.rs"
required-features = [ "ral"] 
