[package]
name = "eziclean"
version = "0.1.0"
authors = ["Sergey Matyukevich <geomatsi@gmail.com>"]
edition = "2018"

autobins = false
autotests = false
autoexamples = false

[features]
default = ["hal"]
hal = ["stm32f1xx-hal"]
ral = ["stm32ral"]

# deps

[dependencies]
cortex-m-rt = "0.6.8"
panic-semihosting = "0.5.2"
cortex-m-semihosting = "0.3.3"
panic-itm = "0.4.1"
nb = "0.1.2"
cortex-m-rtfm = "0.4.3"

[dependencies.cortex-m]
version="0.6.0"
features=["const-fn"]

[dependencies.kxcj9]
version = "0.2.0"

[dependencies.bitbang-hal]
git = "https://github.com/sajattack/bitbang-hal"

[dependencies.stm32f1xx-hal]
optional = true
git = "https://github.com/stm32-rs/stm32f1xx-hal.git"
features = ["stm32f101", "rt"]

[dependencies.stm32ral]
optional = true
version = "0.2.0"
features = ["stm32f101", "rt"]

# main

[[bin]]
name = "test-hal-rtfm-robot-v1"
path = "src/bin/test-hal-rtfm-robot-v1.rs"
required-features = [ "hal" ]

# hal examples

[[example]]
name = "example-hal-pwm-wheels"
path = "examples/hal/example-hal-pwm-wheels.rs"
required-features = [ "hal"] 

[[example]]
name = "example-hal-pwm-brushes"
path = "examples/hal/example-hal-pwm-brushes.rs"
required-features = [ "hal"] 

[[example]]
name = "example-hal-adc-sensors"
path = "examples/hal/example-hal-adc-sensors.rs"
required-features = [ "hal"] 

[[example]]
name = "example-hal-wheel-encoders"
path = "examples/hal/example-hal-wheel-encoders.rs"
required-features = [ "hal" ]

[[example]]
name = "example-hal-battery-charging"
path = "examples/hal/example-hal-battery-charging.rs"
required-features = [ "hal" ]

[[example]]
name = "example-hal-pwr"
path = "examples/hal/example-hal-pwr.rs"
required-features = [ "hal" ]

[[example]]
name = "example-hal-i2c-acc-test1"
path = "examples/hal/example-hal-i2c-acc-test1.rs"
required-features = [ "hal" ]

[[example]]
name = "example-hal-i2c-acc-test2"
path = "examples/hal/example-hal-i2c-acc-test2.rs"
required-features = [ "hal" ]

[[example]]
name = "example-hal-sensor-button"
path = "examples/hal/example-hal-sensor-button.rs"
required-features = [ "hal" ]

[[example]]
name = "example-hal-i2c-disp-test1"
path = "examples/hal/example-hal-i2c-disp-test1.rs"
required-features = [ "hal" ]

[[example]]
name = "example-hal-ir-rc-test1"
path = "examples/hal/example-hal-ir-rc-test1.rs"
required-features = [ "hal" ]

[[example]]
name = "example-hal-timer-irq"
path = "examples/hal/example-hal-timer-irq.rs"
required-features = [ "hal" ]

# ral examples

[[example]]
name = "example-ral-beep"
path = "examples/ral/example-ral-beep.rs"
required-features = [ "ral"] 

[[example]]
name = "example-ral-front-ir-leds"
path = "examples/ral/example-ral-front-ir-leds.rs"
required-features = [ "ral"] 

[[example]]
name = "example-ral-bottom-ir-les"
path = "examples/ral/example-ral-bottom-ir-leds.rs"
required-features = [ "ral"] 

[[example]]
name = "example-ral-right-wheel"
path = "examples/ral/example-ral-right-wheel.rs"
required-features = [ "ral"] 

[[example]]
name = "example-ral-left-wheel"
path = "examples/ral/example-ral-left-wheel.rs"
required-features = [ "ral"] 

[[example]]
name = "example-ral-brushes"
path = "examples/ral/example-ral-brushes.rs"
required-features = [ "ral"] 

[[example]]
name = "example-ral-wheel-encoders"
path = "examples/ral/example-ral-wheel-encoders.rs"
required-features = [ "ral"] 

[[example]]
name = "example-ral-floor-sensors"
path = "examples/ral/example-ral-floor-sensors.rs"
required-features = [ "ral"] 

[[example]]
name = "example-ral-front-sensors"
path = "examples/ral/example-ral-front-sensors.rs"
required-features = [ "ral"] 

[[example]]
name = "example-ral-adc-sensors"
path = "examples/ral/example-ral-adc-sensors.rs"
required-features = [ "ral" ]

[[example]]
name = "example-ral-pwm-wheels"
path = "examples/ral/example-ral-pwm-wheels.rs"
required-features = [ "ral" ]
