[package]
name = "eziclean"
version = "0.1.0"
authors = ["Sergey Matyukevich <geomatsi@gmail.com>"]
edition = "2018"

autobins = false
autotests = false
autoexamples = false

[features]
default = ["hal"]
hal = ["stm32f1xx-hal"]
ral = ["stm32ral"]

# deps

[dependencies]
cortex-m-rt = "0.6.11"
panic-semihosting = "0.5.3"
cortex-m-semihosting = "0.3.5"
panic-itm = "0.4.1"
nb = "0.1.2"
heapless = "0.5.1"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.cortex-m-rtfm]
version = "0.5.1"

[dependencies.embedded-hal]
version="0.2.3"
features=["unproven"]

[dependencies.cortex-m]
version="0.6.1"
features=["const-fn"]

[dependencies.kxcj9]
version = "0.2.0"

[dependencies.bitbang-hal]
version = "0.3.0"

[dependencies.stm32f1xx-hal]
optional = true
version = "0.5.0"
features = ["stm32f101", "rt", "medium"]

[dependencies.stm32ral]
optional = true
version = "0.2.0"
features = ["stm32f101", "rt"]

# main

[[bin]]
name = "platform-v1"
path = "src/bin/platform-v1.rs"
required-features = [ "hal" ]

# hal examples

[[example]]
name = "example-hal-pwm-wheels"
path = "examples/hal/example-hal-pwm-wheels.rs"
required-features = [ "hal"] 

[[example]]
name = "example-hal-pwm-brushes"
path = "examples/hal/example-hal-pwm-brushes.rs"
required-features = [ "hal"] 

[[example]]
name = "example-hal-adc-sensors"
path = "examples/hal/example-hal-adc-sensors.rs"
required-features = [ "hal"] 

[[example]]
name = "example-hal-wheel-encoders"
path = "examples/hal/example-hal-wheel-encoders.rs"
required-features = [ "hal" ]

[[example]]
name = "example-hal-battery-charging"
path = "examples/hal/example-hal-battery-charging.rs"
required-features = [ "hal" ]

[[example]]
name = "example-hal-pwr"
path = "examples/hal/example-hal-pwr.rs"
required-features = [ "hal" ]

[[example]]
name = "example-hal-i2c-acc-test1"
path = "examples/hal/example-hal-i2c-acc-test1.rs"
required-features = [ "hal" ]

[[example]]
name = "example-hal-i2c-acc-test2"
path = "examples/hal/example-hal-i2c-acc-test2.rs"
required-features = [ "hal" ]

[[example]]
name = "example-hal-sensor-button"
path = "examples/hal/example-hal-sensor-button.rs"
required-features = [ "hal" ]

[[example]]
name = "example-hal-i2c-disp-test1"
path = "examples/hal/example-hal-i2c-disp-test1.rs"
required-features = [ "hal" ]

[[example]]
name = "example-hal-i2c-disp-test2"
path = "examples/hal/example-hal-i2c-disp-test2.rs"
required-features = [ "hal" ]

[[example]]
name = "example-hal-ir-rc-test1"
path = "examples/hal/example-hal-ir-rc-test1.rs"
required-features = [ "hal" ]

[[example]]
name = "example-hal-ir-rc-test3"
path = "examples/hal/example-hal-ir-rc-test3.rs"
required-features = [ "hal" ]

[[example]]
name = "example-hal-ir-rc-test4"
path = "examples/hal/example-hal-ir-rc-test4.rs"
required-features = [ "hal" ]

[[example]]
name = "example-hal-timer-irq-test1"
path = "examples/hal/example-hal-timer-irq-test1.rs"
required-features = [ "hal" ]

[[example]]
name = "example-hal-timer-irq-test2"
path = "examples/hal/example-hal-timer-irq-test2.rs"
required-features = [ "hal" ]

# ral examples

[[example]]
name = "example-ral-beep"
path = "examples/ral/example-ral-beep.rs"
required-features = [ "ral"] 

[[example]]
name = "example-ral-front-ir-leds"
path = "examples/ral/example-ral-front-ir-leds.rs"
required-features = [ "ral"] 

[[example]]
name = "example-ral-bottom-ir-les"
path = "examples/ral/example-ral-bottom-ir-leds.rs"
required-features = [ "ral"] 

[[example]]
name = "example-ral-right-wheel"
path = "examples/ral/example-ral-right-wheel.rs"
required-features = [ "ral"] 

[[example]]
name = "example-ral-left-wheel"
path = "examples/ral/example-ral-left-wheel.rs"
required-features = [ "ral"] 

[[example]]
name = "example-ral-brushes"
path = "examples/ral/example-ral-brushes.rs"
required-features = [ "ral"] 

[[example]]
name = "example-ral-wheel-encoders"
path = "examples/ral/example-ral-wheel-encoders.rs"
required-features = [ "ral"] 

[[example]]
name = "example-ral-floor-sensors"
path = "examples/ral/example-ral-floor-sensors.rs"
required-features = [ "ral"] 

[[example]]
name = "example-ral-front-sensors"
path = "examples/ral/example-ral-front-sensors.rs"
required-features = [ "ral"] 

[[example]]
name = "example-ral-adc-sensors"
path = "examples/ral/example-ral-adc-sensors.rs"
required-features = [ "ral" ]

[[example]]
name = "example-ral-pwm-wheels"
path = "examples/ral/example-ral-pwm-wheels.rs"
required-features = [ "ral" ]

[[example]]
name = "example-hal-rtfm-robot-v1"
path = "examples/hal/example-hal-rtfm-robot-v1.rs"
required-features = [ "hal" ]

[[example]]
name = "example-hal-rtfm-robot-v2"
path = "examples/hal/example-hal-rtfm-robot-v2.rs"
required-features = [ "hal" ]

[[example]]
name = "example-hal-rtfm-robot-v3"
path = "examples/hal/example-hal-rtfm-robot-v3.rs"
required-features = [ "hal" ]
